
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/multi_id.proto";
import "prototype/type.proto";

message so_blockProducerVote {
	prototype.bp_voter_id              voter_id       =      1;
    prototype.bp_witness_id 								   witness_id     =      2;
    prototype.time_point_sec           vote_time      =      3;
      
}


message so_mem_blockProducerVote_by_voter_id {
	prototype.bp_voter_id           	voter_id   = 1;
}


message so_mem_blockProducerVote_by_witness_id {
	prototype.bp_witness_id 									witness_id = 1;
}


message so_mem_blockProducerVote_by_vote_time {
	prototype.time_point_sec        	vote_time  = 1;
}


message so_list_blockProducerVote_by_voter_id {
	prototype.bp_voter_id           	voter_id   = 1;
}


message so_unique_blockProducerVote_by_voter_id {
	prototype.bp_voter_id           	voter_id   = 1;
}
